tests/machine/x/fs/partial_application.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/partial_application.fs(6,17): error FS0001: This expression was expected to have type
    obj    
but here has type
    'a -> 'c    

/workspace/mochi/tests/machine/x/fs/partial_application.fs(7,15): error FS0003: This value is not a function and cannot be applied
