tests/machine/x/fs/partial_application.fs
// Generated by Mochi compiler v0.10.27 on 2025-07-17T07:48:10Z
open System

let add (a) (b) =
    a + b
let add5 = add 5
printfn "%A" (add5 3)
